docs/runbooks/platform-manual-assets/kcn-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: kc-networking
    control-plane: controller
  name: kcn-system
